# desktop-automator

./: .gitignore  README.md  index.html  latest.json  package-lock.json  package.json
.kiro/hooks/: code-quality-review.kiro.hook
docs/: activadades.md  actualizaciones-automaticas.md  comercializacion-trial.md  marketing-copy.md  microsoft-store-publicacion.md  multiidioma.md  parametros-interactividad.md  privacy-policy.md  proteccion-software.md  sales-description.md  store-listing.md  trial-stripe-implementacion.md
perfiles/: oficina-tipica.json  variables-powershell-demo.json
public/: help-en.html  help.html
src/: App.tsx  index.css  main.tsx  types.ts  version.ts
src-tauri/: Cargo.toml  miobjeto.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  license.rs  main.rs  stripe.rs
src-tauri/src/commands/: apps.rs  browser.rs  mod.rs  mouse.rs  powershell.rs  screenshot.rs
src/components/: AboutModal.tsx  ActivityCard.tsx  AddActivityMenu.tsx  CursorPosition.tsx  FileInput.tsx  LanguageSelector.tsx  LicenseGate.tsx  LogPanel.tsx  ProfileBar.tsx  ResizablePanels.tsx  SampleProfilesMenu.tsx  StatusBar.tsx  TitleBar.tsx  UpdateNotification.tsx
src/data/: sampleProfiles.ts
src/hooks/: useProfiles.ts  useSimulation.ts  useTheme.ts  useUpdater.ts  useWindow.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  es.json
